<resources>
    <string name="app_name">HealthCare</string>
    <string name="title_activity_homescreen">HealthCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_goal">Goal</string>
    <string name="menu_mreminder">Medication Reminder</string>
    <string name="menu_bpressure">Blood Pressure</string>
    <string name="menu_bsugar">Blood Sugar</string>
    <string name="menu_calories">Calories</string>
    <string name="menu_logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="facebook_app_id">FACEBOOK-APP-ID</string>-->
    <!--<string name="fb_login_protocol_scheme">fbFACEBOOK-APP-ID</string>-->
    <string name="facebook_app_id">802839733496941</string>
    <string name="fb_login_protocol_scheme">fb802839733496941</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
